--- a/Editor/Unity.com.dgw0103.directionutility.Editor.asmdef
+++ b/Editor/Unity.com.dgw0103.directionutility.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.com.{{COMPANY}}.{{REPOSITORY_NAME}}.Editor",
+    "name": "Unity.com.dgw0103.directionutility.Editor",
     "references": [],
     "includePlatforms": [
         "Editor"
