--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.dgw0103.directionutility",
-  "displayName": "dgw0103 - Direction utility",
+  "displayName": "DirectionUtility",
   "version": "0.0.0",
   "description": "Direction utility tools for unity",
   "keywords": [
