update objects finding

--- a/Editor/Unity.com.dgw0103.directionutility.Editor.asmdef
+++ b/Editor/Unity.com.dgw0103.directionutility.Editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "Unity.com.dgw0103.directionutility.Editor",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [
         "Editor"
